--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/network": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "^2.0.1",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
@@ -35,6 +36,7 @@
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-push": "^2.1.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -52,7 +54,11 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-network-information": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "phonegap-plugin-push": {
+        "SENDER_ID": "863170626382",
+        "FCM_VERSION": "11.0.1"
+      }
     },
     "platforms": [
       "android"
